syntax="proto3";

package hello;

service Hello {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc StreamHello (Void) returns (stream HelloReply);
}

message  HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message Void {

}